--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,21 +15,24 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9  # Or any other version you wish to use
+        python-version: 3.9 
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run main.py
+    - name: Download NSRDB data (2011 - 2021)
+      run: python nsrdb_data_download.py
+
+    - name: Clean the data
       run: python main.py
 
-    - name: Run nsrdb_data_download.py
-      run: python nsrdb_data_download.py
+    - name: Predict NSRDB data for 2022 and 2023
+      run: python main.py
 
     - name: Upload data directory as artifact
       uses: actions/upload-artifact@v2
       with:
-        name: Clean Data
+        name: Data
         path: data/
